# HexNanoController_Android

./: .gitignore  import-summary.txt  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common.h  gl_bg_video_sprite_stub.cpp  java_callbacks.cpp  vmcipc_cmd.cpp  vmcipc_javatool.cpp  vmcipc_videostream.cpp
app/src/main/cpp/DEC/: vmc_decoder_handler.h  vmc_rec_handler.h
app/src/main/cpp/config/: IPCConfig.cpp
app/src/main/cpp/legacy/: fflush.c  fwalk.c  local.h
app/src/main/java/com/hexairbot/hexmini/: HexMiniApplication.java  HudExViewController.java  MainExActivity.java  SettingsViewController.java
app/src/main/java/com/hexairbot/hexmini/ble/: BleConnectinManager.java
app/src/main/java/com/hexairbot/hexmini/ipc/activity/: ShareMediaActivity.java
app/src/main/java/com/hexairbot/hexmini/modal/: ApplicationSettings.java  OSDCommon.java  OSDData.java
app/src/main/java/com/hexairbot/hexmini/util/: FileHelper.java
app/src/main/java/com/vmc/ipc/service/: ApConnectService.java
app/src/main/res/drawable/: btn_back_arrow.xml
app/src/main/res/layout/: ble_device_list_row.xml  help_screen.xml  progress_dialog.xml  settings_screen.xml
app/src/main/res/values/: hud_screen_dimens.xml  themes.xml
